2008-10-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Catch multiple root nodes.

	* MonoDevelop.Xml.StateEngine/XDom.cs: Add field to XDocument for root
	node. Add some element-enumerating methods to XElement. Rename
	RecursiveNodes to AllDescendentNodes.

	* MonoDevelop.Xml.StateEngine/Parser.cs: Track line/col so we can use
	the same error class as MonoDevelop.Projects.Dom.

2008-10-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Don't try to create
	completion list when the array of source elements is null. Fixes
	exception in XML editor.

2008-10-21  Ryan Bair  <ryandbair@gmail.com>

	* MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs:
	  Capture full name of opening tag. Don't read back past an end bracket.

2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Move updating of
	state engine so that subclasses don't have to do it.

2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Implement
	attribute value completion and attribute completion.

2008-10-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Move more code
	here from the ASP.NET completion extension.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionDataProvider.cs:
	* MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs:
	Track APIs.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs: